--- a/src/main/resources/fxml/EmployeeTableView.fxml
+++ b/src/main/resources/fxml/EmployeeTableView.fxml
@@ -1,28 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.control.cell.*?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.*?>
-<?import java.util.HashMap?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="de.htwsaar.prog3.carrental.controller.table.EmployeeTableViewController"
             onKeyPressed="#handleKeyEvent"
             stylesheets="@styles.css">
-    <fx:define>
-        <HashMap fx:id="searchComboBoxFieldStrings"
-                 id="%employee.label.id"
-                 firstName="%employee.label.first-name"
-                 lastName="%employee.label.last-name"
-                 position="%employee.label.position"/>
-    </fx:define>
-    <fx:define>
-        <HashMap fx:id="searchComboBoxComparatorStrings"
-                 equals="%search.operator.equals"
-                 like="%search.operator.contains"/>
-    </fx:define>
     <top>
         <GridPane>
             <columnConstraints>
@@ -53,25 +39,9 @@
             </MenuBar>
             <!-- Row 1 -->
             <ComboBox fx:id="searchAttributeComboBox" GridPane.rowIndex="1" GridPane.columnIndex="0" maxWidth="Infinity"
-                      promptText="%search.prompt.column">
-                <items>
-                    <FXCollections fx:factory="observableArrayList">
-                        <fx:reference source="searchComboBoxFieldStrings.id"/>
-                        <fx:reference source="searchComboBoxFieldStrings.firstName"/>
-                        <fx:reference source="searchComboBoxFieldStrings.lastName"/>
-                        <fx:reference source="searchComboBoxFieldStrings.position"/>
-                    </FXCollections>
-                </items>
-            </ComboBox>
+                      promptText="%search.prompt.column"/>
             <ComboBox fx:id="searchOperatorComboBox" GridPane.rowIndex="1" GridPane.columnIndex="1" maxWidth="Infinity"
-                      promptText="%search.prompt.operator">
-                <items>
-                    <FXCollections fx:factory="observableArrayList">
-                        <fx:reference source="searchComboBoxComparatorStrings.equals"/>
-                        <fx:reference source="searchComboBoxComparatorStrings.like"/>
-                    </FXCollections>
-                </items>
-            </ComboBox>
+                      promptText="%search.prompt.operator"/>
             <TextField fx:id="searchValueTextField" GridPane.rowIndex="1" GridPane.columnIndex="2" maxWidth="Infinity"
                        promptText="%search.prompt.value"/>
             <Button GridPane.rowIndex="1" GridPane.columnIndex="3" maxWidth="Infinity"
