--- a/src/main/resources/fxml/RentalEditView.fxml
+++ b/src/main/resources/fxml/RentalEditView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.sun.javafx.scene.control.IntegerField?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.Pane?>
 <Pane xmlns="http://javafx.com/javafx"
@@ -15,7 +16,7 @@
     </Pane>
     <Pane layoutY="60.0" prefHeight="160.0" prefWidth="540.0">
         <Label layoutX="30.0" layoutY="10.0" text="Begin renting on"/>
-        <DatePicker fx:id="beginDatePicker" layoutX="30.0" layoutY="28.0" prefHeight="25.0" prefWidth="150.0"/>
+        <DatePicker fx:id="startDatePicker" layoutX="30.0" layoutY="28.0" prefHeight="25.0" prefWidth="150.0"/>
         <Label layoutX="30.0" layoutY="65.0" text="End renting on"/>
         <DatePicker fx:id="endDatePicker" layoutX="30.0" layoutY="83.0" prefHeight="25.0" prefWidth="150.0"/>
         <Button layoutX="195.0" layoutY="83.0" mnemonicParsing="false" onAction="#handleConfirmButtonClicked" text="Confirm"/>
@@ -24,12 +25,12 @@
         <Label layoutX="300.0" layoutY="32.0" text="Daily Rate:"/>
         <Label fx:id="dailyRateLabel" layoutX="363.0" layoutY="32.0"/>
         <Label layoutX="300.0" layoutY="65.0" text="Extra Costs"/>
-        <TextField fx:id="extraCostsTextField" layoutX="300.0" layoutY="83.0" prefHeight="25.0" prefWidth="150.0" text="0"/>
+        <IntegerField fx:id="extraCostsIntegerField" layoutX="300.0" layoutY="83.0" prefHeight="25.0" prefWidth="150.0"/>
         <Label layoutX="300.0" layoutY="120.0" prefHeight="17.0" prefWidth="34.0" text="Sum:"/>
         <Label fx:id="sumLabel" layoutX="332.0" layoutY="120.0"/>
     </Pane>
     <Pane layoutY="220.0" prefHeight="510.0" prefWidth="540.0">
-        <Label layoutX="30.0" layoutY="10.0" text="%customer.label.driver-license-id"/>
+        <Label layoutX="30.0" layoutY="10.0" text="%customer.label.driver-license-number"/>
         <TextField fx:id="driverLicenseIdTextField" layoutX="30.0" layoutY="30.0" prefHeight="25.0" prefWidth="150.0"/>
         <Button layoutX="195.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleSearchButtonClicked" text="%search.button.submit"/>
         <Label layoutX="30.0" layoutY="70.0" text="%customer.label.first-name"/>
@@ -40,17 +41,15 @@
         <TextField fx:id="idNumberTextField" layoutX="30.0" layoutY="150.0"/>
         <Label layoutX="300.0" layoutY="130.0" text="%customer.label.date-of-birth"/>
         <TextField fx:id="dateOfBirthTextField" layoutX="300.0" layoutY="150.0"/>
-        <Label layoutX="30.0" layoutY="190.0" text="%customer.label.zip-code"/>
-        <TextField fx:id="zipCodeTextField" layoutX="30.0" layoutY="210.0" text="0"/>
+        <Label layoutX="30.0" layoutY="190.0" text="%customer.label.zipcode"/>
+        <IntegerField fx:id="zipcodeIntegerField" layoutX="30.0" layoutY="210.0"/>
         <Label layoutX="300.0" layoutY="190.0" text="%customer.label.city"/>
         <TextField fx:id="cityTextField" layoutX="300.0" layoutY="210.0"/>
         <Label layoutX="30.0" layoutY="250.0" text="%customer.label.street"/>
         <TextField fx:id="streetTextField" layoutX="30.0" layoutY="270.0"/>
-        <Label layoutX="300.0" layoutY="250.0" text="%customer.label.house-number"/>
-        <TextField fx:id="houseNumberTextField" layoutX="300.0" layoutY="270.0"/>
         <Label layoutX="30.0" layoutY="310.0" text="%customer.label.email"/>
         <TextField fx:id="emailTextField" layoutX="30.0" layoutY="330.0"/>
-        <Label layoutX="300.0" layoutY="310.0" text="%customer.label.phone-number"/>
+        <Label layoutX="300.0" layoutY="310.0" text="%customer.label.phone"/>
         <TextField fx:id="phoneNumberTextField" layoutX="300.0" layoutY="330.0"/>
         <Label layoutX="30.0" layoutY="370.0" text="%rental.label.note"/>
         <TextArea fx:id="noteTextArea" layoutX="30.0" layoutY="390.0" prefHeight="100.0" prefWidth="250.0"/>
