--- a/src/main/resources/fxml/styles.css
+++ b/src/main/resources/fxml/styles.css
@@ -1,4 +1,9 @@
-#searchComboBoxField:error, #searchComboBoxComparator:error, #searchTextField:error {
+*:error {
     -fx-border-color: red;
     -fx-border-radius: 3px; /* from modena.css */
+}
+
+.edit-title {
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
 }
