--- a/src/main/resources/fxml/RentalEditView.fxml
+++ b/src/main/resources/fxml/RentalEditView.fxml
@@ -29,7 +29,7 @@
                 <Label text="%rental.label.car" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
                 <TextField fx:id="carTextField" GridPane.rowIndex="1" GridPane.columnIndex="0" disable="true"/>
                 <Label text="%rental.label.employee" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
-                <ChoiceBox fx:id="employeeChoiceBox" GridPane.rowIndex="1" GridPane.columnIndex="1" maxWidth="Infinity"/>
+                <ComboBox fx:id="employeeComboBox" GridPane.rowIndex="1" GridPane.columnIndex="1" maxWidth="Infinity"/>
                 <!-- Row 2 -->
                 <Label text="%rental.label.start" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
                 <DatePicker fx:id="startDatePicker" GridPane.rowIndex="3" GridPane.columnIndex="0" onAction="#handleDateAndPriceChanges"/>
